RESOLVED FIXED194519
[Cocoa] Web Automation: client callbacks are not called if delegate does not override
https://bugs.webkit.org/show_bug.cgi?id=194519
Summary [Cocoa] Web Automation: client callbacks are not called if delegate does not ...
Blaze Burg
Reported 2019-02-11 15:45:57 PST
For some platforms that can't resize, it's not expected that setWindowFrame has any effect. However, it and other completion handler-based methods need to always call the completion handler. For example, some of those methods are called when going in/out of fullscreen.
Attachments
Patch (3.78 KB, patch)
2019-02-11 15:49 PST, Blaze Burg
no flags
Radar WebKit Bug Importer
Comment 1 2019-02-11 15:46:28 PST
Blaze Burg
Comment 2 2019-02-11 15:49:21 PST
Joseph Pecoraro
Comment 3 2019-02-11 15:50:26 PST
Comment on attachment 361723 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-02-11 17:15:55 PST
Comment on attachment 361723 [details] Patch Clearing flags on attachment: 361723 Committed r241285: <https://trac.webkit.org/changeset/241285>
WebKit Commit Bot
Comment 5 2019-02-11 17:15:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.