[Cocoa] Web Automation: client callbacks are not called if delegate does not override https://bugs.webkit.org/show_bug.cgi?id=194519 <rdar://problem/47981961>

Reviewed by Joseph Pecoraro.

Call the completion handler directly if the delegate does not implement the relevant method.

* UIProcess/Cocoa/AutomationSessionClient.mm:
(WebKit::AutomationSessionClient::requestNewPageWithOptions):
(WebKit::AutomationSessionClient::requestSwitchToPage):
(WebKit::AutomationSessionClient::requestHideWindowOfPage):
(WebKit::AutomationSessionClient::requestRestoreWindowOfPage):
(WebKit::AutomationSessionClient::requestMaximizeWindowOfPage):


Canonical link: https://commits.webkit.org/208944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241285 268f45cc-cd09-0410-ab3c-d52691b4dbfc